--- a/package.json
+++ b/package.json
@@ -34,23 +34,23 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
-    "eslint": "^4.18.2",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1"
+    "eslint": "^8.18.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-standard": "^5.0.0"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.17.1",
-    "browserify": "^14.1.0",
-    "cachet-api": "github:applebetas/cachet-api",
-    "cookie-session": "^2.0.0-beta.1",
-    "csurf": "^1.9.0",
-    "del": "^2.2.2",
+    "body-parser": "^1.20.0",
+    "browserify": "^17.0.0",
+    "cachet-api": "^1.0.11",
+    "cookie-session": "^2.0.0",
+    "csurf": "^1.11.0",
+    "del": "^6.1.1",
     "dynastic-provider": "dynastic/accounts-provider.git",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "express-brute-mongoose": "^1.1.0",
-    "express-recaptcha": "^2.1.0",
+    "express-recaptcha": "^5.1.0",
     "fs-extra-promise": "^1.0.1",
     "graceful-fs": "^4.2.10",
     "gulp": "^4.0.2",
