--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "cachet-api": "^1.0.11",
     "cookie-session": "^2.0.0",
     "core-js": "^3.30.1",
-    "csurf": "^1.11.0",
+    "csrf": "^3.1.0",
     "del": "^7.0.0",
     "dynastic-provider": "dynastic/accounts-provider.git",
     "eslint-plugin-import": "^2.26.0",
@@ -61,19 +61,19 @@
     "gulp-changed": "^4.0.3",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "helmet": "^5.1.1",
-    "jimp": "^0.16.1",
-    "jwt-simple": "^0.5.1",
+    "helmet": "^6.1.5",
+    "jimp": "^0.22.7",
+    "jwt-simple": "^0.5.6",
     "marked": "^4.3.0",
     "md5": "^2.3.0",
-    "mongoose": "^4.13.21",
-    "mongoose-datatables": "github:aydenp/mongoose-datatables",
-    "morgan": "^1.8.1",
+    "mongoose": "^7.0.3",
+    "mongoose-datatables": "3.2.0",
+    "morgan": "^1.10.1",
     "passport": "^0.3.2",
-    "passport-discord": "^0.1.2",
-    "passport-facebook": "^2.1.1",
+    "passport-discord": "^0.1.4",
+    "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
-    "passport-google-oauth20": "^1.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-microsoft": "^1.0.0",
