--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "core-js": "^3.30.1",
     "csurf": "^1.11.0",
     "del": "^2.2.2",
-    "dynastic-provider": "dynastic/accounts-provider.git",
+    "dynastic-provider": "github:dynastic/accounts-provider",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "express": "^4.18.2",
@@ -64,7 +64,7 @@
     "helmet": "^6.1.5",
     "jimp": "^0.22.7",
     "jwt-simple": "^0.5.6",
-    "marked": "^4.3.0",
+    "marked": "^4.0.10",
     "md5": "^2.3.0",
     "mongoose": "^7.0.3",
     "mongoose-datatables": "3.2.0",
