--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   ],
   "license": "AGPL-3.0",
   "devDependencies": {
-    "@babel/core": "^7.21.4",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
@@ -41,21 +40,17 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "browserify": "^17.0.0",
     "cachet-api": "^1.0.11",
     "cookie-session": "^2.0.0",
-    "core-js": "^3.30.1",
     "csurf": "^1.11.0",
     "del": "^2.2.2",
     "dynastic-provider": "github:dynastic/accounts-provider",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
     "express": "^4.18.2",
-    "express-brute": "^1.0.1",
     "express-brute-mongoose": "^1.1.0",
     "express-recaptcha": "^5.1.0",
     "fs-extra-promise": "^1.0.1",
-    "graceful-fs": "^4.2.11",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-changed": "^4.0.3",
@@ -83,11 +78,8 @@
     "pump": "^3.0.0",
     "qrcode": "^1.5.1",
     "raven": "^2.6.4",
-    "socket.io": "^4.6.1",
     "speakeasy": "^2.0.0",
     "stream-file-archive": "^1.1.4",
-    "uWebSockets.js": "uNetworking/uWebSockets.js#v20.20.0",
-    "undertaker": "^1.3.0",
-    "vinyl-fs": "^3.0.3"
+    "uWebSockets.js": "uNetworking/uWebSockets.js#v20.20.0"
   }
 }
