--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "cookie-session": "^2.0.0",
     "csurf": "^1.11.0",
     "del": "^2.2.2",
-    "dynastic-provider": "github:dynastic/accounts-provider",
+    "dynastic-provider": "github:McShare/accounts-provider",
     "express": "^4.18.2",
     "express-brute-mongoose": "^1.1.0",
     "express-recaptcha": "^5.1.0",
@@ -62,7 +62,7 @@
     "marked": "^4.0.10",
     "md5": "^2.3.0",
     "mongoose": "^7.0.3",
-    "mongoose-datatables": "3.2.0",
+    "mongoose-datatables": "github:aydenp/mongoose-datatables",
     "morgan": "^1.10.0",
     "passport": "^0.3.2",
     "passport-discord": "^0.1.4",
@@ -78,6 +78,7 @@
     "pump": "^3.0.0",
     "qrcode": "^1.5.1",
     "raven": "^2.6.4",
+    "socket.io": "^4.6.1",
     "speakeasy": "^2.0.0",
     "stream-file-archive": "^1.1.4",
     "uWebSockets.js": "uNetworking/uWebSockets.js#v20.20.0"
