--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   ],
   "license": "AGPL-3.0",
   "devDependencies": {
+    "@babel/core": "^7.21.4",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
