--- a/package.json
+++ b/package.json
@@ -29,59 +29,58 @@
   ],
   "license": "AGPL-3.0",
   "devDependencies": {
-    "@babel/core": "^7.21.4",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
-    "eslint": "^8.38.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-standard": "^5.0.0"
+    "eslint": "^4.18.2",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
-    "browserify": "^17.0.0",
-    "cachet-api": "^1.0.11",
-    "cookie-session": "^2.0.0",
-    "csurf": "^1.11.0",
+    "body-parser": "^1.17.1",
+    "browserify": "^14.1.0",
+    "cachet-api": "^1.0.8",
+    "cookie-session": "^2.0.0-beta.1",
+    "csurf": "^1.9.0",
     "del": "^2.2.2",
-    "dynastic-provider": "github:McShare/accounts-provider",
-    "express": "^4.18.2",
-    "express-brute-mongoose": "^1.1.0",
-    "express-recaptcha": "^5.1.0",
+    "dynastic-provider": "github:dynastic/accounts-provider",
+    "express": "^4.17.3",
+    "express-brute-mongoose": "0.0.8",
+    "express-recaptcha": "^2.1.0",
     "fs-extra-promise": "^1.0.1",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-changed": "^4.0.3",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
-    "helmet": "^6.1.5",
-    "jimp": "^0.22.7",
-    "jwt-simple": "^0.5.6",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-changed": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^2.1.2",
+    "helmet": "^3.8.1",
+    "jimp": "^0.5.4",
+    "jwt-simple": "^0.5.1",
     "marked": "^4.0.10",
-    "md5": "^2.3.0",
-    "mongoose": "^7.0.3",
+    "md5": "^2.2.1",
+    "mongoose": "^4.13.21",
     "mongoose-datatables": "github:aydenp/mongoose-datatables",
-    "morgan": "^1.10.0",
+    "morgan": "^1.8.1",
     "passport": "^0.3.2",
-    "passport-discord": "^0.1.4",
-    "passport-facebook": "^3.0.0",
+    "passport-discord": "^0.1.2",
+    "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.1",
+    "passport-google-oauth20": "^1.0.0",
+    "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
-    "passport-microsoft": "^1.0.0",
-    "passport-reddit": "^1.1.0",
+    "passport-microsoft": "^0.0.5",
+    "passport-reddit": "^0.2.4",
     "passport-twitter": "^1.0.4",
-    "pug": "^3.0.2",
-    "pump": "^3.0.0",
-    "qrcode": "^1.5.1",
-    "raven": "^2.6.4",
+    "pug": "^3.0.0",
+    "pump": "^1.0.2",
+    "qrcode": "^0.9.0",
+    "raven": "^2.1.0",
     "socket.io": "^4.6.1",
     "speakeasy": "^2.0.0",
-    "stream-file-archive": "^1.1.4",
+    "stream-file-archive": "^1.1.3",
     "uWebSockets.js": "uNetworking/uWebSockets.js#v20.20.0"
   }
 }
