--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-standard": "^2.0.1"
   },
   "dependencies": {
+    "@babel/core": "^7.21.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.17.1",
     "browserify": "^14.1.0",
@@ -51,15 +52,15 @@
     "express-brute-mongoose": "0.0.8",
     "express-recaptcha": "^2.1.0",
     "fs-extra-promise": "^1.0.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-changed": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^2.1.2",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-changed": "^4.0.3",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
     "helmet": "^3.8.1",
     "jimp": "^0.5.4",
     "jwt-simple": "^0.5.1",
-    "marked": "^4.0.10",
+    "marked": "^3.0.8",
     "md5": "^2.2.1",
     "mongoose": "^4.13.21",
     "mongoose-datatables": "github:aydenp/mongoose-datatables",
